# SimulAI

./: .gitignore  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pre-commit.yml
src/simulai/: __init__.py  cli.py
src/simulai/agents/: base.py  emotions.py  goals.py  memory.py  simulite.py  traits.py
src/simulai/core/: world.py
src/simulai/data/examples/: tiny_world.yaml
src/simulai/environment/: events.py  grid.py  resources.py
src/simulai/io/: serialize.py
src/simulai/render/: pygame_renderer.py  text.py
tests/: test_emotions_weather.py  test_goal_chaining.py  test_goals.py  test_memory_behaviors.py  test_serde_roundtrip.py  test_traits_food_interactions.py
