[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulai"
version = "0.0.1"
description = "SimulAI - Where Your Digital Creatures Develop Attitude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Robert R Annan" }]
keywords = ["simulation", "ai", "agents", "emergence", "game", "fun"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment :: Simulation",
  "Topic :: Scientific/Engineering :: Artificial Life"
]

# Keep runtime deps empty for now (lightweight core).
dependencies = []

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/SimulAI"
Issues = "https://github.com/YOUR_USERNAME/SimulAI/issues"

# Expose CLI: `simulai`
[project.scripts]
simulai = "simulai.cli:main"

# --- setuptools (src-layout) ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["simulai", "simulai.*"]

# Include YAML data files shipped with the package (if any)
[tool.setuptools.package-data]
simulai = ["data/**/*.yaml"]

# --- Optional dev dependencies ---
[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4"
]

# --- pytest config (pyproject-native) ---
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# --- Ruff linter config (optional but useful) ---
[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
``
