[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulai"
version = "0.0.1"
description = "SimulAI - Where Your Digital Creatures Develop Attitude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Robert Annan" }]
keywords = ["simulation", "ai", "agents", "emergence", "game", "fun"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment :: Simulation",
  "Topic :: Scientific/Engineering :: Artificial Life",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Forecastle-Tech/SimulAI"
Issues = "https://github.com/Forecastle-Tech/SimulAI/issues"

[project.scripts]
simulai = "simulai.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["simulai", "simulai.*"]

[tool.setuptools.package-data]
simulai = ["data/**/*.yaml"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "pre-commit>=3.6",
  "pygame>=2.5",
]
yaml = [
  "pyyaml>=6.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
